# binlog

./: .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CNAME  INSTALL.md  Internals.html  LICENSE  Mserialize.html  NOTICE  README.md  UserGuide.html  index.html
.github/: dependabot.yml
.github/workflows/: on_pull_request.yml  on_push_main.yml  scorecards.yml
cmake/: AddressSanitizer.cmake  Coverage.cmake  MarkdownToHtml.cmake  OptionalCompileOption.cmake  ThreadSanitizer.cmake  UndefinedSanitizer.cmake  binlogConfig.cmake.in
dco/: dco_template.txt
doc/: Internals.md  Mserialize.md  UserGuide.md  body.html  catchfile.py  codelink.py  gendoc.py  index.html
example/: ConsumeLoop.cpp  DetailedHelloWorld.cpp  HelloWorld.cpp  LogRotation.cpp  MultiOutput.cpp  TextOutput.cpp  TscClock.cpp  binlog2json.cpp
include/binlog/: Address.hpp  ArrayView.hpp  Entries.hpp  EntryStream.cpp  EntryStream.hpp  EventFilter.hpp  EventStream.cpp  EventStream.hpp  PrettyPrinter.cpp  PrettyPrinter.hpp  Range.hpp  Session.hpp  SessionWriter.hpp  Severity.hpp  TextOutputStream.cpp  TextOutputStream.hpp  Time.cpp  Time.hpp  ToStringVisitor.cpp  ToStringVisitor.hpp  adapt_enum.hpp  adapt_stdduration.hpp  adapt_stderrorcode.hpp  adapt_stdfilesystem.hpp  adapt_stdoptional.hpp  adapt_stdtimepoint.hpp  adapt_stdvariant.hpp  adapt_struct.hpp  advanced_log_macros.hpp  basic_log_macros.hpp  binlog.hpp  char_ptr_is_string.hpp  const_char_ptr_is_string.hpp  create_source.hpp  create_source_and_event.hpp  create_source_and_event_if.hpp  default_session.hpp
include/binlog/detail/: Cueue.hpp  MemoryMappedFile.hpp  OstreamBuffer.cpp  OstreamBuffer.hpp  Queue.hpp  QueueReader.hpp  QueueWriter.hpp  SegmentedMap.hpp  VectorOutputStream.hpp  read_sources.hpp  read_sources_linux.hpp  read_sources_macos.hpp
include/mserialize/: StructDeserializer.hpp  StructSerializer.hpp  Visitor.hpp  cx_string.hpp  deserialize.hpp  make_derived_struct_deserializable.hpp  make_derived_struct_serializable.hpp  make_derived_struct_tag.hpp  make_enum_tag.hpp  make_struct_deserializable.hpp  make_struct_serializable.hpp  make_struct_tag.hpp  make_template_deserializable.hpp  make_template_serializable.hpp  make_template_tag.hpp  serialize.hpp  singular.hpp  string_view.hpp  tag.hpp  visit.hpp
include/mserialize/detail/: Deserializer.hpp  Serializer.hpp  Singular.hpp  Tag.hpp  Visit.hpp  integer_to_hex.hpp  preprocessor.hpp  sequence_traits.hpp  tag_util.hpp  type_traits.hpp
test/cmake/: headers.cpp  lib.cpp
test/cmake/install/: CMakeLists.txt
test/cmake/subdir/: CMakeLists.txt
test/doctest/: doctest.h
test/integration/: Categories.cpp  IntegrationTest.cpp  Logging.cpp  LoggingAdaptedConcepts.cpp  LoggingAdaptedStructs.cpp  LoggingBoostTypes.cpp  LoggingCStrings.cpp  LoggingContainers.cpp  LoggingDuration.cpp  LoggingEnums.cpp  LoggingErrorCode.cpp  LoggingFilesystem.cpp  LoggingFundamentals.cpp  LoggingOptionals.cpp  LoggingPointers.cpp  LoggingStrings.cpp  LoggingTimePoint.cpp  LoggingTuples.cpp  LoggingVariants.cpp  NamedWriters.cpp  SeverityControl.cpp  Shell.cpp  StaticStorage.cpp  StaticStorageDynamicLib.cpp  StaticStorageSharedLib.cpp
test/integration/data/: dateformat.blog
test/perf/: LargeLogfile.cpp  PerftestCueue.cpp  PerftestQueue.cpp  PerftestSessionWriter.cpp
test/unit/: UnitTest.cpp
test/unit/binlog/: TestAdvancedLogMacros.cpp  TestArrayView.cpp  TestBasicLogMacros.cpp  TestConstCharPtrIsString.cpp  TestCreateSourceAndEvent.cpp  TestCreateSourceAndEventIf.cpp  TestEntryStream.cpp  TestEventFilter.cpp  TestEventStream.cpp  TestPrettyPrinter.cpp  TestPrinters.cpp  TestQueue.cpp  TestSession.cpp  TestSessionWriter.cpp  TestTextOutputStream.cpp  TestTime.cpp  TestToStringVisitor.cpp  test_utils.cpp  test_utils.hpp
test/unit/binlog/detail/: TestCueue.cpp  TestOstreamBuffer.cpp  TestSegmentedMap.cpp
test/unit/mserialize/: custom_array.hpp  cx_string.cpp  documentation.cpp  inttohex.cpp  roundtrip.cpp  singular.cpp  tag.cpp  tag_util.cpp  test_enums.hpp  test_streams.hpp  test_structs.hpp  test_type_lists.hpp  visit.cpp
tools/: generate_foreach_macro.cpp
